samples/_failures_safe/1761250423_e8e233_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b712c4e2.c: In function ‘parse_string’:
./samples/SAFE/__tmp_b712c4e2.c:157:5: error: expected expression at end of input
  157 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_b712c4e2.c:157:5: error: expected declaration or statement at end of input
